# project-template

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  Snakefile  create_environment.sh  install.sh  pyproject.toml  setup.sh
.claude/skills/snakemake/: skill.md  utils.smk
.github/workflows/: ci.yml
dashboard/: build.py  index.html  status.toml
data/: README.md
exps/: README.md
lib/: README.md
libs/: README.md
libs/project_package_name/: setup.py
libs/project_package_name/tests/: README.md
models/: README.md
notebooks/: README.md
notes/: README.md
paper/: README.md  main.bib
paper/current/: Makefile  cover.tex  main.tex  supp.tex
results/: README.md
src/: README.md
src/project_name/: example.py
tests/: README.md  test_dashboard.py  test_example.py
workflow/: README.md  Snakefile  config.template.yaml  config.yaml  workflow_utils.smk
workflow/logs/: README.md
workflow/notebooks/: README.md
workflow/reports/: README.md
workflow/rules/: README.md
workflow/scripts/: README.md  process_data.py  summarize.py
